# food-factory

./: .gitignore  CMakeLists.txt  README.md  justfile  pyproject.toml
src/food_factory/: __init__.py  _core.pyi
src/food_factory/cpp/: Biscuit.cpp  Biscuit.h  Chocolate.cpp  Chocolate.h  Factory.cpp  Factory.h  Food.h  food_factory_ext.cpp
tests/: test_nanobind_features.py  test_signature_types.py
